tests/baselines/reference/signatureLengthMismatchWithOptionalParameters.errors.txt
tests/cases/compiler/signatureLengthMismatchWithOptionalParameters.ts(5,8): error TS2345: Argument of type '(n: number, m: string) => void' is not assignable to parameter of type '(n?: number) => void'.
  The source signature requires more arguments (2) than are provided by the target (1).


==== tests/cases/compiler/signatureLengthMismatchWithOptionalParameters.ts (1 errors) ====
    function callee(n: number | undefined, m: string) { }
    
    function caller(arg: (n?: number) => void) { }
    
    caller(callee);
           ~~~~~~
!!! error TS2345: Argument of type '(n: number, m: string) => void' is not assignable to parameter of type '(n?: number) => void'.
!!! error TS2345:   The source signature requires more arguments (2) than are provided by the target (1).
    